// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Health Widget should render KPI widgets 1`] = `
<DocumentFragment>
  .c6 {
  width: 16px;
  height: 16px;
}

.c6 path {
  stroke: var(--acx-neutrals-50);
}

.c6 circle {
  fill: var(--acx-neutrals-50);
}

.c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c1 .ant-card-head {
  display: none;
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c5 {
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  width: 100%;
  height: 100%;
}

.c7 {
  margin: 0px 0px -4px 4px;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="c2"
              />
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-row "
            style="margin: -10px -10px -10px -10px; flex-grow: 1;"
          >
            <div
              class="ant-col ant-col-3 c3"
              style="padding: 10px 10px 10px 10px;"
            >
              <div
                class="c4"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center c5"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c2"
                    >
                      Client Experience
                      <svg
                        class="c6 c7"
                        data-testid="HistoricalOutlined"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-7 c3"
              style="padding: 10px 10px 10px 10px;"
            >
              <div
                class="c4"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center c5"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      data-name="connectionSuccess"
                      data-testid="kpiWidget"
                    >
                      Kpi Widget
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-7 c3"
              style="padding: 10px 10px 10px 10px;"
            >
              <div
                class="c4"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center c5"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      data-name="timeToConnect"
                      data-testid="kpiWidget"
                      data-threshold="1000"
                    >
                      Kpi Widget
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-7 c3"
              style="padding: 10px 10px 10px 10px;"
            >
              <div
                class="c4"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center c5"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      data-name="clientThroughput"
                      data-testid="kpiWidget"
                      data-threshold="5000"
                    >
                      Kpi Widget
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Health Widget should render KPI widgets for empty threshold value 1`] = `
<DocumentFragment>
  .c6 {
  width: 16px;
  height: 16px;
}

.c6 path {
  stroke: var(--acx-neutrals-50);
}

.c6 circle {
  fill: var(--acx-neutrals-50);
}

.c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c1 .ant-card-head {
  display: none;
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c5 {
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  width: 100%;
  height: 100%;
}

.c7 {
  margin: 0px 0px -4px 4px;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="c2"
              />
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-row "
            style="margin: -10px -10px -10px -10px; flex-grow: 1;"
          >
            <div
              class="ant-col ant-col-3 c3"
              style="padding: 10px 10px 10px 10px;"
            >
              <div
                class="c4"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center c5"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c2"
                    >
                      Client Experience
                      <svg
                        class="c6 c7"
                        data-testid="HistoricalOutlined"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-7 c3"
              style="padding: 10px 10px 10px 10px;"
            >
              <div
                class="c4"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center c5"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      data-name="connectionSuccess"
                      data-testid="kpiWidget"
                    >
                      Kpi Widget
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-7 c3"
              style="padding: 10px 10px 10px 10px;"
            >
              <div
                class="c4"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center c5"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      data-name="timeToConnect"
                      data-testid="kpiWidget"
                      data-threshold="2000"
                    >
                      Kpi Widget
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-7 c3"
              style="padding: 10px 10px 10px 10px;"
            >
              <div
                class="c4"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center c5"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      data-name="clientThroughput"
                      data-testid="kpiWidget"
                      data-threshold="10000"
                    >
                      Kpi Widget
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
